--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,12 @@ dependencies = [
     "sqlalchemy>=2.0.0",
     "psycopg2-binary>=2.9.9",
     "click>=8.0.0",
-    "python-dotenv>=1.0.0"
+    "python-dotenv>=1.0.0",
+    "scikit-learn>=1.3.0",
+    "xgboost>=2.0.0",
+    "numpy>=1.24.0",
+    "pandas>=2.0.0",
+    "tabulate>=0.9.0"
 ]
 
 [project.scripts]
