--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,5 +18,31 @@ services:
       timeout: 5s
       retries: 5
 
+  api:
+    build:
+      context: .
+      dockerfile: Dockerfile.api
+    container_name: algobet-api
+    command: uvicorn algobet.api.main:app --host 0.0.0.0 --port 8000 --reload
+    ports:
+      - "8000:8000"
+    volumes:
+      - ./algobet:/app/algobet
+      - ./data:/app/data
+    depends_on:
+      db:
+        condition: service_healthy
+    environment:
+      - POSTGRES_USER=algobet
+      - POSTGRES_PASSWORD=password
+      - POSTGRES_DB=football
+      - POSTGRES_HOST=db
+      - POSTGRES_PORT=5432
+      - API_HOST=0.0.0.0
+      - API_PORT=8000
+      - API_ENV=development
+      - CORS_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
+      - LOG_LEVEL=info
+
 volumes:
   pgdata:
