--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,9 @@ dependencies = [
     "pydantic>=2.5.0",
     "pydantic-settings>=2.1.0",
     "pytest>=7.4.0",
-    "httpx>=0.25.0"
+    "httpx>=0.25.0",
+    "pytest-asyncio>=1.3.0",
+    "ruff>=0.14.14",
 ]
 
 [project.optional-dependencies]
@@ -90,6 +92,11 @@ skip-magic-trailing-comma = false
 [build-system]
 requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
+
+[dependency-groups]
+dev = [
+    "pre-commit>=4.5.1",
+]
 
 [tool.setuptools.packages.find]
 where = ["."]
