feat(scheduler): add task scheduling system with frontend UI
Implement a comprehensive task scheduling and execution system with cron-based automation, including:

- Add ScheduledTask and TaskExecution models for persistent job tracking
- Create SchedulerService with task registry and execution management
- Implement scheduler worker process with cron expression support
- Add CLI tools for development, scheduled task execution, and schedule seeding
- Create Docker configuration for cron-based scheduling
- Add Next.js frontend with scraping management interface
- Implement UI components for job monitoring and progress tracking
- Add WebSocket hooks for real-time progress updates
- Configure API client for scraping operations

This enables automated daily/weekly scraping and prediction generation with a web-based management interface.

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,15 @@ __pycache__/
 .env
 algobet.egg-info/
 football.db
+
+# Frontend
+frontend/node_modules
+frontend/.next
+frontend/out
+frontend/.vercel
+frontend/*.tsbuildinfo
+frontend/next-env.d.ts
+frontend/.env.local
+frontend/.env.production.local
+frontend/.env.development.local
+frontend/.env.test.local
