--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ dependencies = [
     "httpx>=0.25.0",
     "pytest-asyncio>=1.3.0",
     "ruff>=0.14.14",
+    "apscheduler>=3.10.0",
+    "croniter>=2.0.0",
 ]
 
 [project.optional-dependencies]
@@ -33,7 +35,10 @@ dev = [
 ]
 
 [project.scripts]
-algobet = "algobet.cli:cli"
+algobet = "algobet.cli.dev_tools:cli"
+algobet-dev = "algobet.cli.dev_tools:cli"
+algobet-scheduler = "algobet.scheduler.worker:cli"
+algobet-runner = "algobet.cli.scheduled_runner:cli"
 
 [tool.ruff]
 target-version = "py310"
@@ -96,6 +101,7 @@ build-backend = "setuptools.build_meta"
 [dependency-groups]
 dev = [
     "pre-commit>=4.5.1",
+    "types-croniter>=2.0.0",
 ]
 
 [tool.setuptools.packages.find]
@@ -119,6 +125,7 @@ module = [
     "psycopg2.*",
     "psycopg2_binary.*",
     "tabulate.*",
+    "croniter.*",
 ]
 ignore_missing_imports = true
 
