feat(predictions): add complete ML training and evaluation pipeline
Implement comprehensive machine learning infrastructure for match prediction:

Training Pipeline:
- Add XGBoost, LightGBM, RandomForest, and Ensemble classifiers
- Implement temporal data splitting to prevent data leakage
- Add hyperparameter tuning with Optuna Bayesian optimization
- Implement probability calibration (isotonic/sigmoid methods)

Feature Engineering:
- Create feature pipeline orchestrator for ML workflows
- Add feature store with JSONB caching and versioning
- Implement feature generators (form, H2H, odds, temporal)
- Add feature transformers (scaling, selection, missing values)

Evaluation System:
- Add classification metrics (accuracy, F1, log loss, Brier score)
- Implement calibration analysis with reliability diagrams
- Add betting simulation metrics (ROI, Sharpe ratio, drawdown)
- Create HTML/Markdown report generation

Database & Infrastructure:
- Add ModelFeature table for feature caching with JSONB
- Update Pydantic models to use ConfigDict pattern
- Remove deprecated Docker Compose version directive
- Add lightgbm and optuna dependencies

Documentation:
- Add comprehensive API documentation with all endpoints
- Add system overview documentation
- Update README with full architecture and usage guide
- Mark refactoring tasks as completed

--- a/docker-compose.scheduler.yml
+++ b/docker-compose.scheduler.yml
@@ -1,6 +1,6 @@
 services:
   db:
-    image: postgres:18-alpine
+    image: postgres:18
     container_name: algobet-db
     environment:
       POSTGRES_USER: algobet
