--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ dependencies = [
     "python-dotenv>=1.0.0",
     "scikit-learn>=1.3.0",
     "xgboost>=2.0.0",
+    "lightgbm>=4.0.0",
+    "optuna>=3.4.0",
     "numpy>=1.24.0",
     "pandas>=2.0.0",
     "tabulate>=0.9.0",
